# LiftSync

./: CMakeLists.txt  Dockerfile  PyTestRunner.py  README.md
include/: Elevator.hpp  ElevatorSystem.hpp  RequestHandler.hpp
src/: Elevator.cpp  ElevatorSystem.cpp  RequestHandler.cpp  main.cpp
